<?xml version="1.0"?>
<package>
  <name>vrep_dwa</name>
  <version>0.0.1</version>
  <description>The vrep_dwa package</description>
  <maintainer email="jmpechem@snu.ac.kr">jimin</maintainer>
  <license>BSD</license>
  <author email="jmpechem@snu.ac.kr">jimin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>ros_tutorial_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>ros_tutorial_msgs</run_depend>

</package>
